--- a/src/styles/AddUser.module.css
+++ b/src/styles/AddUser.module.css
@@ -19,7 +19,6 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
-    
     padding: 0px 80px 0px 80px;
   }
   .formGroup:first-child{
@@ -87,13 +86,48 @@
 -webkit-appearance: none;
 /* Remove up-down arrows for numerical inputs in Webkit browsers */
 }
-  .background{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 1000;
+.background{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1000;
 
-    background-color: #000000b8;
-  }
+  background-color: #000000b8;
+}
+.details{
+  text-align: center;
+}
+
+.editButton,
+.deleteButton{
+  width: 100px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+  margin-left: 20px;
+  border-radius: 2px;
+  color: white;
+  font-size: 17px;
+}
+.editButton{
+  background-color: #8706ff93 ;
+  box-shadow: 0 0 8px #2b0054;
+}
+.editButton:hover{
+  background-color: #51009c;
+}
+.deleteButton:hover{
+  background-color: #8f0000;
+}
+
+.deleteButton{
+  background-color: #cc0000b7;
+  box-shadow: 0 0 8px rgb(108, 0, 0);
+}
+.divBtns{
+  display: flex;
+  justify-content: end;
+  margin: 0 80px ;
+}
