--- a/src/styles/Boarder.module.css
+++ b/src/styles/Boarder.module.css
@@ -40,11 +40,11 @@
 .card{
     width: 220px;
     height: 180px;
-    background-color: #2a363b;
+    background-color: #212121;
     color: rgb(255, 255, 255);
     border-radius: 10px;
     padding: 20px 0 0 20px;
-
+    box-shadow: 0 0 1px white;
 }
 
 .title{
